--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "hexlet-trials"
-version = "0.1.2"
+version = "0.2.0"
 description = ""
 authors = ["Evgeny Sokolov <sokolovsolod@gmail.com>"]
 readme = "README.md"
@@ -10,7 +10,7 @@ packages = [
 
 
 [tool.poetry.scripts]
-ch2_4_test = "lessons_codes.tests.ch2_4_autotests_tests:main"
+ch2_4_test = "lessons_codes.tests.test_ch2_4:main"
 
 
 [tool.poetry.dependencies]
@@ -19,6 +19,7 @@ python = "^3.10"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.0.0"
+pytest = "^7.3.1"
 
 [build-system]
 requires = ["poetry-core"]
