--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,7 @@ per-file-ignores =
 [tool:pytest]
 norecursedirs = __pycache__
 addopts = --strict-markers
+#addopts = -ra -q --cache-clear
 
 [isort]
 # See https://github.com/timothycrosley/isort#multi-line-output-modes
